Support weblogic 12 plugin

--- a/oap-server/server-starter/src/main/resources/component-libraries.yml
+++ b/oap-server/server-starter/src/main/resources/component-libraries.yml
@@ -216,6 +216,9 @@ spring-cloud-gateway:
 RESTEasy:
   id: 62
   languages: Java
+Weblogic:
+  id: 63
+  languages: Java
 
 # .NET/.NET Core components
 # [3000, 4000) for C#/.NET only
