--- a/oap-server/server-bootstrap/src/main/resources/component-libraries.yml
+++ b/oap-server/server-bootstrap/src/main/resources/component-libraries.yml
@@ -263,6 +263,9 @@ rest-high-level-client:
 spring-tx:
   id: 78
   languages: Java
+sqljdbc4:
+  id: 79
+  languages: Java
 
 # .NET/.NET Core components
 # [3000, 4000) for C#/.NET only
@@ -376,3 +379,4 @@ Component-Server-Mappings:
   pulsar-producer: Pulsar
   pulsar-consumer: Pulsar
   rest-high-level-client: Elasticsearch
+  sqljdbc4: SQLServer
