--- a/test/plugin/scenarios/hikaricp-2.x-scenario/src/main/resources/jdbc.properties
+++ b/test/plugin/scenarios/hikaricp-2.x-scenario/src/main/resources/jdbc.properties
@@ -2,7 +2,7 @@
 # or more contributor license agreements.  See the NOTICE file
 # distributed with this work for additional information
 # regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache License, Version 2.0 (the
+# to you under the Apache License, Version
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
 #
@@ -13,7 +13,6 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
-hikaricp-2.x=org.apache.skywalking.apm.plugin.hikaricp.define.HikariPoolInstrumentation
-hikaricp-2.x=org.apache.skywalking.apm.plugin.hikaricp.define.ConnectionProxyInstrumentation
-hikaricp-2.x=org.apache.skywalking.apm.plugin.hikaricp.define.ProxyConnectionInstrumentation
+mysql.url=jdbc:mysql://mysql-server:3306/test?serverTimezone=CST
+mysql.username=root
+mysql.password=root
