--- a/apm-sniffer/apm-sdk-plugin/hikaricp-2.x-plugin/pom.xml
+++ b/apm-sniffer/apm-sdk-plugin/hikaricp-2.x-plugin/pom.xml
@@ -39,8 +39,15 @@
         </dependency>
         <dependency>
             <groupId>org.apache.skywalking</groupId>
+            <artifactId>connection-pool-commons</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.skywalking</groupId>
             <artifactId>apm-jdbc-commons</artifactId>
-            <version>8.3.0-SNAPSHOT</version>
+            <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
