--- a/test/plugin/scenarios/hikaricp-2.x-scenario/config/expectedData.yaml
+++ b/test/plugin/scenarios/hikaricp-2.x-scenario/config/expectedData.yaml
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 segmentItems:
-- serviceName: dbcp-2.x-scenario
+- serviceName: hikaricp-2.x-scenario
   segmentSize: nq 0
   segments:
   - segmentId: not null
@@ -58,9 +58,9 @@ segmentItems:
         - {key: db.type, value: sql}
         - {key: db.instance, value: test}
         - key: db.statement
-          value: "CREATE TABLE test_DBCP(\nid VARCHAR(1) PRIMARY KEY, \nvalue VARCHAR(1)\
+          value: "CREATE TABLE test_hikaricp(\nid VARCHAR(1) PRIMARY KEY, \nvalue VARCHAR(1)\
           \ NOT NULL)"
-    - operationName: DBCP/Connection/close
+    - operationName: HikariCP/Connection/close
       operationId: 0
       parentSpanId: 0
       spanId: 4
@@ -71,7 +71,7 @@ segmentItems:
       spanType: Local
       peer: ''
       skipAnalysis: false
-    - operationName: DBCP/Connection/getConnection
+    - operationName: HikariCP/Connection/getConnection
       operationId: 0
       parentSpanId: 0
       spanId: 5
@@ -97,8 +97,8 @@ segmentItems:
         - {key: db.type, value: sql}
         - {key: db.instance, value: test}
         - key: db.statement
-          value: 'INSERT INTO test_DBCP(id, value) VALUES(1,1)'
-    - operationName: DBCP/Connection/close
+          value: 'INSERT INTO test_hikaricp(id, value) VALUES(1,1)'
+    - operationName: HikariCP/Connection/close
       operationId: 0
       parentSpanId: 0
       spanId: 7
@@ -109,7 +109,7 @@ segmentItems:
       spanType: Local
       peer: ''
       skipAnalysis: false
-    - operationName: DBCP/Connection/getConnection
+    - operationName: HikariCP/Connection/getConnection
       operationId: 0
       parentSpanId: 0
       spanId: 8
@@ -135,8 +135,8 @@ segmentItems:
         - {key: db.type, value: sql}
         - {key: db.instance, value: test}
         - key: db.statement
-          value: 'SELECT id, value FROM test_DBCP WHERE id=1'
-    - operationName: DBCP/Connection/close
+          value: 'SELECT id, value FROM test_hikaricp WHERE id=1'
+    - operationName: HikariCP/Connection/close
       operationId: 0
       parentSpanId: 0
       spanId: 10
@@ -147,7 +147,7 @@ segmentItems:
       spanType: Local
       peer: ''
       skipAnalysis: false
-    - operationName: DBCP/Connection/getConnection
+    - operationName: HikariCP/Connection/getConnection
       operationId: 0
       parentSpanId: 0
       spanId: 11
@@ -173,8 +173,8 @@ segmentItems:
         - {key: db.type, value: sql}
         - {key: db.instance, value: test}
         - key: db.statement
-          value: "DELETE FROM test_DBCP WHERE id=1"
-    - operationName: DBCP/Connection/close
+          value: "DELETE FROM test_hikaricp WHERE id=1"
+    - operationName: HikariCP/Connection/close
       operationId: 0
       parentSpanId: 0
       spanId: 13
@@ -185,7 +185,7 @@ segmentItems:
       spanType: Local
       peer: ''
       skipAnalysis: false
-    - operationName: DBCP/Connection/getConnection
+    - operationName: HikariCP/Connection/getConnection
       operationId: 0
       parentSpanId: 0
       spanId: 14
@@ -211,8 +211,8 @@ segmentItems:
         - {key: db.type, value: sql}
         - {key: db.instance, value: test}
         - key: db.statement
-          value: "DROP table test_DBCP"
-    - operationName: DBCP/Connection/close
+          value: "DROP table test_hikaricp"
+    - operationName: HikariCP/Connection/close
       operationId: 0
       parentSpanId: 0
       spanId: 16
@@ -223,7 +223,7 @@ segmentItems:
       spanType: Local
       peer: ''
       skipAnalysis: false
-    - operationName: /dbcp-2.x-scenario/case/dbcp-2.x-scenario
+    - operationName: /case/hikaricp-2.x-scenario
       operationId: 0
       parentSpanId: -1
       spanId: 0
@@ -236,5 +236,5 @@ segmentItems:
       peer: ''
       skipAnalysis: false
       tags:
-        - {key: url, value: 'http://localhost:8080/dbcp-2.x-scenario/case/dbcp-2.x-scenario'}
+        - {key: url, value: 'http://localhost:8080/case/hikaricp-2.x-scenario'}
         - {key: http.method, value: GET}
