--- a/test/plugin/scenarios/hikaricp-2.x-scenario/src/main/resources/application.yaml
+++ b/test/plugin/scenarios/hikaricp-2.x-scenario/src/main/resources/application.yaml
@@ -19,3 +19,7 @@ server:
   port: 8080
   servlet:
     context-path: /
+mysql:
+  url: jdbc:mysql://mysql-server:3306/test?serverTimezone=CST
+  username: root
+  password: root
